--- a/views/css/index.css
+++ b/views/css/index.css
@@ -27,6 +27,7 @@ img {
 .container {
     background: var(--main-hover-color);
     display: flex;
+    padding: 20px;
 }
 .navbars {
     margin-left: auto;
@@ -51,4 +52,62 @@ img {
 object {
     width: 100%;
     height: 100%;
+}
+.button {
+    background-color: var(--main-color);
+    color: var(--main-text);
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: system-ui;
+    cursor: pointer;
+}
+.game-display {
+    background: var(--main-color);
+    margin: 10px;
+    padding: 10px;
+    display: inline-block;
+    border-radius: 15px;
+}
+.game-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.play {
+    background-color: var(--play-color);
+    border: none;
+    display: inline-block;
+    font-family: system-ui;
+    padding: 10px;
+    border-radius: 15px;
+    color: var(--main-text);
+    width: 240px;
+    cursor: pointer;
+}
+.modal {
+    background-color: var(--main-color);
+    width: fit-content;
+    display: none;
+    position: absolute;
+    top: 3%;
+    left: 40%;
+    border-radius: 15px;
+    align-items: center;
+}
+select, input, textarea, #add-game-form button {
+    background-color: var(--main-color);
+    border: 1px solid var(--main-text);
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.close {
+    color: var(--main-text);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
 }
