--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/variables.css"
+<link rel="stylesheet" href="css/variables.css">
 <div class="home">
     <h1>Welcome back!</h1>
     <button class="button" onclick="addGames()">Add game</button>
