bug fixes 1/8 11:40 GMT+7

--- a/views/css/index.css
+++ b/views/css/index.css
@@ -44,6 +44,7 @@ img {
 .navbutton {
     padding: 10px;
     -webkit-appearance: none;
+    outline: none;
     border: none;
     background: var(--main-color);
 }
