--- a/views/index.html
+++ b/views/index.html
@@ -35,6 +35,7 @@
             <div id="store" class="tabcontent">
                 <div class="store">
                     <h1>Store (WIP)</h1>
+                    <button class="button">Refresh Store</button>
                 </div>
             </div>
             <div id="settings" class="tabcontent">
