--- a/views/css/index.css
+++ b/views/css/index.css
@@ -4,7 +4,7 @@
 body {
     background: var(--main-color);
     color: var(--main-text);
-    font-family: system-ui;
+    font-family: 'Effra', system-ui;
     user-select: none;
 }
 .menu-tab {
@@ -68,7 +68,7 @@ object, iframe {
     border: none;
     border-radius: 5px;
     padding: 10px;
-    font-family: system-ui;
+    font-family: 'Effra', system-ui;
     cursor: pointer;
 }
 .game-display {
@@ -89,7 +89,7 @@ object, iframe {
     background-color: var(--play-color);
     border: none;
     display: inline-block;
-    font-family: system-ui;
+    font-family: 'Effra', system-ui;
     padding: 10px;
     border-radius: 15px;
     color: var(--main-text);
