--- a/views/css/variables.css
+++ b/views/css/variables.css
@@ -1,3 +1,27 @@
+@font-face {
+    font-family: 'Effra';
+    src: url('../../assets/fonts/Effra_Trial_Rg.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Effra';
+    src: url('../../assets/fonts/Effra_Trial_It.ttf');
+    font-weight: 400;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Effra';
+    src: url('../../assets/fonts/Effra_Trial_Bd.ttf');
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Effra';
+    src: url('../../assets/fonts/Effra_Trial_BdIt.ttf');
+    font-weight: 700;
+    font-style: italic;
+}
 :root {
     --main-color: #1d1d1d;
     --main-hover-color: #2e2e2e;
